# long-range-radio-rs

./: .gitignore  Cargo.toml  NOTES.md  README.md  TODO.md  UPDATE.md  build.rs  memory.x
.claude/: settings.json
basestation/: Cargo.toml  memory.x
basestation/host/: basestation_proto.py  data_relay.py  ota_upload.py  requirements.txt
basestation/src/: main.rs  uart_proto.rs
csrc/: RadioHead.h  rh_shim.cpp  rh_shim.h
mesh/: adapter.rs  lib.rs  radio.rs
src/: config.rs  driver.rs  ffi.rs  lib.rs  mesh.rs  node.rs  ota.rs  ota_protocol.rs  ota_sender.rs  platform.rs  radio.rs  watchdog.rs
sx1262-mesh-rs/: Cargo.toml  TODO.md  memory.x
sx1262-mesh-rs/.cargo/: config.toml
sx1262-mesh-rs/src/: config.rs  lib.rs  platform.rs  radio.rs
