[package]
edition = "2024"
name = "sx1262-mesh-rs"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "sx1262-mesh-rs"
path = "./src/bin/main.rs"

[features]
default = []
debug = []

[dependencies]
nano-mesh-rs = { path = ".." }
sx126x = "0.3"
embedded-hal = "1.0"
embedded-hal-bus = "0.2"
portable-atomic = { version = "1", features = ["critical-section"] }

rp2040-hal = { version = "0.10", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"
cortex-m = "0.7"
cortex-m-rt = "0.7"
rtic = { version = "2", features = ["thumbv6-backend"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
