[package]
edition      = "2024"
name         = "sx1262-mesh-rs"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "sx1262-mesh-rs"
path = "./src/bin/main.rs"

[features]
default = []
debug = []

[dependencies]
nano-mesh-rs = { path = ".." }
sx126x = "0.3"
embedded-hal = "1.0"
embedded-hal-bus = "0.2"

esp-hal             = { version = "=1.0.0-rc.0", features = ["esp32c3", "unstable"] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c3"] }
esp-backtrace       = { version = "0.17.0", features = [
  "esp32c3",
  "panic-handler",
  "exception-handler",
  "println",
] }
esp-println         = { version = "0.15.0", features = ["esp32c3"] }
esp32c3             = { version = "0.31.0", features = ["critical-section"] }
rtic                = { path = "../.context/rtic/rtic", features = ["riscv-esp32c3-backend"] }
rtic-monotonics     = { path = "../.context/rtic/rtic-monotonics", features = ["esp32c3-systimer"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'thin'
opt-level        = 's'
overflow-checks  = false
